Fix: ajustes
